[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["jamesheath jamesheathradford@gmail.com"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/JamesFHeath/hello-wasm.git"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"
cgmath = "0.18.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]